added the initializers of the static fields to the beginning of the clinit to avoid null pointers when adding taints to a field in the clinit that has not been initialized